# Stay_AI-The_Chatbot

./: README.md  main.py  requirements.txt
backend/Agents/Agent_frameworks/: agent_001.py
backend/Agents/crewai_crew/: README.md  pyproject.toml  report.md
backend/Agents/crewai_crew/src/crewai_crew/: crew.py  main.py
backend/App/: api.py  models.py
backend/Conversations/: chat.py
backend/llms/groq_llm/: inference.py
backend/memory/chroma_memory/: retrieve_data.py
backend/memory/mem0_memory/: try_mem0.py
backend/utils/: json_utils.py
frontend/: README.md  app.py
