[project]
name = "crewai_crew"
version = "0.1.0"
description = "CrewAI_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crewai_crew = "crewai_crew.main:run"
run_crew = "crewai_crew.main:run"
train = "crewai_crew.main:train"
replay = "crewai_crew.main:replay"
test = "crewai_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
